--- a/code/Makefile
+++ b/code/Makefile
@@ -12,7 +12,7 @@ $(TARGET): $(SRC)
 .PHONY: run
 run: build
 	@echo "Starting local server on port 8000"
-	xdg-open "http://localhost:8000"
+	$(shell if which xdg-open > /dev/null; then xdg-open "http://localhost:8000"; fi)
 	python3 -m http.server 8000
 
 .PHONY: clean
